* the store file can be fragmented
  - block range list defines the fragments ?
* what about trailing volume data that windows is hiding 0x1000 bytes in size ?
  also seen in BDE, so likely something of NTFS

Tools:
* vshadowexport
  - create tool to export a VSS volume ?
* vshadowinfo
  - print attribute flags description
* vshadowmount
  - dokan fix volume size hints

20130721
* Changes for stand-alone libbfio build
* updated msvscpp files

20130718
* remove unnecessary restriction in library include headers
* updated dependencies

20130509
* worked on multi-threading support

20130505
* added libvshadow_volume_get_store_identifier function
* worked on multi-threading support
* slight improvement of error tolerability of catalog parsing

20130504
* added libcthreads
* worked on multi-threading support
* changes to read block descriptors on demand improves vshadowinfo preformance
* worked on tests
* fixes for multiple open/close on the same volume object
* fixed issue in read buffer due to recent changes

20130503
* added store read from file IO handle function
* vshadowmount small changes

20130501
* worked on vshadowmount Dokan support

20130417
* bug fix in dependencies

20130416
* code clean up

20130413
* updated dependencies
* updates and bug fixes in pyvshadow

20130412
* updated README files
* updated dependencies
* added tests directory

20130331
* updated dependencies
* code clean up
* pyvshadow updates
* vshadowtools now detect if there is a VSS signature first and bail out with
  a different error if not

20130304
* added PackageMaker files

20130217
* updated include/types.h

20130205
* fixed typo in vhsadowmount

20130131
* worked on pyvshadow

20130130
* worked on exposing block descriptors via vshadowinfo
* worked on pyvshadow

20130129
* worked on exposing block descriptors via API
* worked on pyvshadow

20130128
* worked on exposing block descriptors via API

20130127
* worked on exposing block descriptors via API